--- a/app/src/main/res/layout/bottomsheetlayout_foodrecord.xml
+++ b/app/src/main/res/layout/bottomsheetlayout_foodrecord.xml
@@ -35,6 +35,7 @@
             android:layout_marginStart="8dp"/>
 
         <TextView
+            android:id ="@+id/bottom_text_carbon"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
@@ -80,15 +81,16 @@
                 android:theme="@style/NumberPickerStyle"/>
 
             <TextView
+                android:id="@+id/numberpicker_text_oneserving"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:text="인분"
-                android:textSize="16sp"
-                android:textColor="@color/grey"
+                android:layout_marginTop="8dp"
                 android:fontFamily="@font/nbold"
                 android:includeFontPadding="false"
-                android:layout_marginTop="8dp"/>
+                android:text="인분"
+                android:textAlignment="center"
+                android:textColor="@color/grey"
+                android:textSize="16sp" />
 
         </LinearLayout>
 
@@ -99,13 +101,13 @@
             android:gravity="center">
 
             <NumberPicker
-                android:id="@+id/numberpicker_mass"
+                android:id="@+id/numberpicker_gram"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:theme="@style/NumberPickerStyle" />
 
             <TextView
-                android:id="@+id/numberpicker_text_mass"
+                android:id="@+id/numberpicker_text_gram"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
