--- a/app/src/main/res/drawable/backgroundrec2.xml
+++ b/app/src/main/res/drawable/backgroundrec2.xml
@@ -6,7 +6,9 @@
 
     <corners
         android:topLeftRadius="20dp"
-        android:topRightRadius="20dp"/>
+        android:topRightRadius="20dp"
+        android:bottomLeftRadius="20dp"
+        android:bottomRightRadius="20dp"/>
 
     <padding
         android:top="10dp"
