--- a/app/src/main/res/layout/record_food.xml
+++ b/app/src/main/res/layout/record_food.xml
@@ -31,7 +31,7 @@
             android:layout_marginStart="8dp"
             android:fontFamily="@font/nbold"
             android:includeFontPadding="false"
-            android:text="@string/title_habitrecord"
+            android:text="@string/title_foodrecord"
             android:textColor="@color/mainGreen"
             android:textSize="16sp" />
     </LinearLayout>
@@ -83,17 +83,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
-
-    <Button
-        android:id="@+id/tempbutton_bottomtest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:text="Button"
-        app:layout_constraintBottom_toTopOf="@+id/buttonfN1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
