--- a/app/src/main/res/layout/recycler_itemview_result.xml
+++ b/app/src/main/res/layout/recycler_itemview_result.xml
@@ -6,14 +6,15 @@
 
     <TextView
         style="@style/TextRegular"
-        android:id="@+id/textview_foodname"
+        android:id="@+id/textview_result"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:text="식단 아이템"
-        android:textSize="16sp"
+        android:text="결과 아이템"
+        android:textSize="20sp"
+        android:textColor="@color/almostBlack"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
