--- a/app/src/main/res/layout/record_habits.xml
+++ b/app/src/main/res/layout/record_habits.xml
@@ -40,13 +40,14 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_habit"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="18dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="18dp"
         android:background="@drawable/habitlistrec"
-        app:layout_constraintBottom_toTopOf="@+id/nextbtn_habit"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout_record1_title" />
 
     <android.widget.Button
         android:id="@+id/nextbtn_habit"
