--- a/app/src/main/res/layout/main_sprout.xml
+++ b/app/src/main/res/layout/main_sprout.xml
@@ -6,18 +6,19 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:onClick="onClick3">
+    >
 
-    <ImageView
+    <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/sprout_main"
-        android:layout_width="160dp"
-        android:layout_height="160dp"
-        android:layout_marginTop="16dp"
-        android:contentDescription="나중에 새싹 이미지 들어감"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout_sprout1"
-        tools:srcCompat="@drawable/tempimage" />
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="walking-plant.json"
+        app:lottie_loop="true" />
 
     <LinearLayout
         android:id="@+id/linearLayout_sprout1"
@@ -39,7 +40,7 @@
             android:includeFontPadding="false"
             android:text="@string/until_today"
             android:textColor="@color/mintGreen"
-            android:textSize="20sp" />
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/savingText_main"
@@ -87,8 +88,8 @@
         android:id="@+id/menubtn"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/menu"
         android:backgroundTint="@color/mintGreen"
         app:layout_constraintEnd_toEndOf="parent"
@@ -109,29 +110,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <android.widget.Button
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="onClick4"
-        android:text="팝업메뉴"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.049"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.023" />
-
     <LinearLayout
         android:id="@+id/linearLayout_sprout2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="48dp"
+        android:layout_marginTop="16dp"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sprout_main">
 
         <TextView
             android:id="@+id/level_main"
@@ -142,7 +130,7 @@
             android:includeFontPadding="false"
             android:text="@string/level_of_sprout"
             android:textColor="@color/mintGreen"
-            android:textSize="16sp" />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/sproutName_main"
@@ -153,7 +141,7 @@
             android:includeFontPadding="false"
             android:text="@string/name_of_sprout"
             android:textColor="@color/mintGreen"
-            android:textSize="20sp" />
+            android:textSize="24sp" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
