--- a/app/src/main/res/layout/mysprout.xml
+++ b/app/src/main/res/layout/mysprout.xml
@@ -5,15 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/circle_image_mysprout"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/sproutimage"
+        app:civ_border_color="@color/almostBlack"
+        app:civ_border_width="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/page6" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout_mysprout_title" />
 
     <LinearLayout
         android:id="@+id/linearLayout_mysprout_title"
@@ -51,67 +53,65 @@
         android:id="@+id/mysprout_sprout_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/nbold"
         android:includeFontPadding="false"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/mysprout_sprout_level"
+        android:textColor="@color/almostBlack"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView8"
-        app:layout_constraintVertical_bias="0.96" />
+        app:layout_constraintTop_toBottomOf="@+id/circle_image_mysprout" />
 
     <TextView
         android:id="@+id/mysprout_sprout_level"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="4dp"
         android:fontFamily="@font/nbold"
         android:includeFontPadding="false"
         android:text="@string/mysprout_level_str"
-        android:textColor="@color/black"
+        android:textColor="@color/grey"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mysprout_sprout_name" />
+
+    <TextView
+        android:id="@+id/mysprout_today"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/nbold"
+        android:includeFontPadding="false"
+        android:text="@string/mysprout_today_str"
+        android:textColor="@color/mainGreen"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/myspout_constraintLayout_above"
+        app:layout_constraintTop_toBottomOf="@+id/mysprout_sprout_level" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
+        android:id="@+id/myspout_constraintLayout_above"
         android:layout_width="360dp"
         android:layout_height="144dp"
-        android:layout_marginTop="248dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/backgroundrec2"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.509"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/mysprout_today"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:fontFamily="@font/nbold"
-            android:includeFontPadding="false"
-            android:text="@string/mysprout_today_str"
-            android:textColor="@color/mainGreen"
-            android:textSize="16sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/mysprout_today">
 
         <TextView
             android:id="@+id/mysprout_today_walk_carbon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="48dp"
-            android:layout_marginEnd="32dp"
+            android:layout_marginTop="16dp"
             android:fontFamily="@font/nbold"
             android:includeFontPadding="false"
             android:text="10.0g"
             android:textColor="@color/mainGreen"
-            android:textSize="12sp"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -119,12 +119,11 @@
             android:id="@+id/mysprout_today_action_carbon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="32dp"
             android:fontFamily="@font/nbold"
             android:includeFontPadding="false"
             android:text="10.0g"
             android:textColor="@color/mainGreen"
-            android:textSize="12sp"
+            android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/mysprout_today_food_carbon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/mysprout_today_walk_carbon" />
@@ -133,13 +132,12 @@
             android:id="@+id/mysprout_today_food_carbon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="32dp"
             android:layout_marginBottom="16dp"
             android:fontFamily="@font/nbold"
             android:includeFontPadding="false"
             android:text="10.0g"
             android:textColor="@color/mainGreen"
-            android:textSize="12sp"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -147,13 +145,13 @@
             android:id="@+id/mysprout_today_walk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="4dp"
             android:fontFamily="@font/nbold"
             android:includeFontPadding="false"
             android:text="0 걸음"
-            android:textColor="@color/grey"
-            android:textSize="12sp"
+            android:textColor="@color/almostBlack"
+            android:textSize="16sp"
             app:layout_constraintEnd_toStartOf="@+id/mysprout_today_walk_carbon"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -165,8 +163,8 @@
             android:fontFamily="@font/nbold"
             android:includeFontPadding="false"
             android:text="0 가지"
-            android:textColor="@color/grey"
-            android:textSize="12sp"
+            android:textColor="@color/almostBlack"
+            android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/mysprout_today_food"
             app:layout_constraintEnd_toStartOf="@+id/mysprout_today_action_carbon"
             app:layout_constraintTop_toBottomOf="@+id/mysprout_today_walk" />
@@ -180,8 +178,8 @@
             android:fontFamily="@font/nbold"
             android:includeFontPadding="false"
             android:text="0 회"
-            android:textColor="@color/grey"
-            android:textSize="12sp"
+            android:textColor="@color/almostBlack"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/mysprout_today_food_carbon" />
 
@@ -189,13 +187,12 @@
             android:id="@+id/mysprout_today_walk_str"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="16dp"
             android:fontFamily="@font/nbold"
             android:includeFontPadding="false"
             android:text="걸음 수"
             android:textColor="@color/grey"
-            android:textSize="12sp"
+            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -203,29 +200,25 @@
             android:id="@+id/mysprout_today_action_str"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="12dp"
             android:fontFamily="@font/nbold"
             android:includeFontPadding="false"
             android:text="습관 기록"
             android:textColor="@color/grey"
-            android:textSize="12sp"
+            android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/mysprout_today_food_str"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mysprout_today_walk_str"
-            app:layout_constraintVertical_bias="0.071" />
+            app:layout_constraintTop_toBottomOf="@+id/mysprout_today_walk_str" />
 
         <TextView
             android:id="@+id/mysprout_today_food_str"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
             android:layout_marginBottom="16dp"
             android:fontFamily="@font/nbold"
             android:includeFontPadding="false"
             android:text="식단 기록"
             android:textColor="@color/grey"
-            android:textSize="12sp"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -235,12 +228,10 @@
         android:layout_width="356dp"
         android:layout_height="212dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.519"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toBottomOf="@+id/myspout_constraintLayout_above">
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
