--- a/app/src/main/res/layout/record_habits.xml
+++ b/app/src/main/res/layout/record_habits.xml
@@ -23,6 +23,7 @@
             android:layout_height="24dp"
             android:layout_marginStart="16dp"
             android:background="@drawable/backward_arrow"
+            android:onClick="onClick_h_back"
             tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
         <TextView
