--- a/app/src/main/res/layout/record_food.xml
+++ b/app/src/main/res/layout/record_food.xml
@@ -22,6 +22,7 @@
             android:layout_height="24dp"
             android:layout_marginStart="16dp"
             android:background="@drawable/backward_arrow"
+            android:onClick="onClick_r_f_back"
             tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
         <TextView
