--- a/app/src/main/res/layout/userinformation.xml
+++ b/app/src/main/res/layout/userinformation.xml
@@ -27,6 +27,7 @@
             android:layout_height="24dp"
             android:layout_marginStart="16dp"
             android:background="@drawable/backward_arrow"
+            android:onClick="onClick_u_back"
             tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
         <TextView
