--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -103,6 +103,7 @@
                 android:fontFamily="@font/nregular"
                 android:includeFontPadding="false"
                 android:text="@string/login_keep"
+                android:textSize="14sp"
                 android:textColor="@color/almostBlack"
                 tools:ignore="TouchTargetSizeCheck" />
 
@@ -110,11 +111,23 @@
                 android:id="@+id/forget_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="4dp"
                 android:fontFamily="@font/nregular"
                 android:includeFontPadding="false"
-                android:text="@string/forget_password"
-                android:textColor="@color/mainGreen" />
+                android:text="@string/new_user"
+                android:textColor="@color/grey"
+                android:textSize="14sp"/>
+
+            <TextView
+                style="@style/TextBold"
+                android:id="@+id/login_to_userinfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="18dp"
+                android:text="회원가입"
+                android:textSize="14sp"
+                android:textColor="@color/mainGreen"/>
+
         </LinearLayout>
 
     </LinearLayout>
