--- a/app/src/main/res/layout/main_sprout.xml
+++ b/app/src/main/res/layout/main_sprout.xml
@@ -10,7 +10,7 @@
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/sprout_main"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
