--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="almostBlack">#433e50</color>
     <color name="grey">#999999</color>
     <color name="lightGrey">#F7F7F7</color>
+    <color name="backGroundGrey">#F8F8FA</color>
     <color name="middleGrey">#DBDBDB</color>
     <color name="errorRed">#FF0000</color>
 
