Record Step Activity ~ dialog ~ Notification

--- a/app/src/main/res/layout/fragment_dialog_choose_transportation.xml
+++ b/app/src/main/res/layout/fragment_dialog_choose_transportation.xml
@@ -6,8 +6,7 @@
     android:layout_height="wrap_content"
     android:paddingStart="24dp"
     android:paddingEnd="24dp"
-    android:background="@drawable/backgroundrec_white"
-    tools:context=".fragment.DialogMovementAmount">
+    android:background="@drawable/backgroundrec_white">
 
     <TextView
         style="@style/TextBold"
