--- a/app/src/main/res/layout/record_step.xml
+++ b/app/src/main/res/layout/record_step.xml
@@ -73,14 +73,14 @@
         app:layout_constraintTop_toTopOf="@+id/imageView" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/record_step_text_transport"
         style="@style/TextBold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="버스 대신 걷기!"
         android:textColor="@color/almostBlack"
-        android:textSize="20sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/record_step_text_steps" />
@@ -121,8 +121,8 @@
             app:layout_constraintStart_toStartOf="parent">
 
             <ImageView
-                android:layout_width="44dp"
-                android:layout_height="44dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:src="@drawable/icon_baseline_location" />
 
             <TextView
@@ -133,7 +133,7 @@
                 android:layout_marginTop="8dp"
                 android:text="00.00"
                 android:textColor="@color/black"
-                android:textSize="28sp" />
+                android:textSize="24sp" />
 
             <TextView
                 style="@style/TextRegular"
@@ -155,8 +155,8 @@
             app:layout_constraintStart_toEndOf="@+id/linearLayout8">
 
             <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
                 android:src="@drawable/icon_baseline_time" />
 
             <TextView
@@ -164,10 +164,10 @@
                 style="@style/TextBold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="10dp"
                 android:text="00:00"
                 android:textColor="@color/black"
-                android:textSize="28sp" />
+                android:textSize="24sp" />
 
             <TextView
                 style="@style/TextRegular"
@@ -190,8 +190,8 @@
             app:layout_constraintEnd_toEndOf="parent">
 
             <ImageView
-                android:layout_width="48dp"
-                android:layout_height="48dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:src="@drawable/icon_baseline_fire" />
 
             <TextView
@@ -202,7 +202,7 @@
                 android:layout_marginTop="8dp"
                 android:text="000"
                 android:textColor="@color/black"
-                android:textSize="28sp" />
+                android:textSize="24sp" />
 
             <TextView
                 style="@style/TextRegular"
